CE 3.18.3 release prep

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -185,3 +185,24 @@ Calico Enterprise 3.18.2 is now available. This release includes bug fixes and i
 #### Updating
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
+### Calico Enterprise 3.18.3 bug fix update
+
+April DD, 2024
+
+Calico Enterprise 3.18.3 is now available. This release includes bug fixes and improvements.
+
+### Improvements
+
+* one
+* two
+
+
+### Bug fixes
+
+* one
+* two
+
+#### Updating
+
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
