Adds observability use case doc

--- a/use-cases/microsegmentation.mdx
+++ b/use-cases/microsegmentation.mdx
@@ -196,16 +196,16 @@ By verifying that correct flows are allowed and denied before enforcement, you c
 To implement microsegmentation, you should follow a structured and repeatable approach to increase the likelihood of success.
 These can be summarized as four broad steps:
 
-1. [Identify the security domains](./microsegmentation#identification-of-security-domains) for which microsegmentation will be enforced, who will be responsible for them, and who or which services need access to those security domains.
+1. [Identify the security domains](./microsegmentation#identify-your-security-domains) for which microsegmentation will be enforced, who will be responsible for them, and who or which services need access to those security domains.
 
-2. [Define a policy](./microsegmentation#developing-policy-framework) model using documented microservice communication for your applications or by analyzing traffic flows.
+2. [Define a policy](./microsegmentation#develop-a-policy-framework) model using documented microservice communication for your applications or by analyzing traffic flows.
    When defining policies you should also consider the scope of the policies (global or namespace), who will be writing and applying the policies, and policy order (or tiers).
 
-3. [Author and deploy network policies](./microsegmentation#deploy-security-policies).
-   Once all the correct allow policies are in place, stage a [default deny policy](./microsegmentation#enforce-default-deny).
+3. [Author and deploy network policies](./microsegmentation#deploy-network-policies).
+   Once all the correct allow policies are in place, stage a [default deny policy](./microsegmentation#enforce-a-default-deny-policy).
    You may want to identify a low-impact application or security domain first to understand and evaluate the process before prioritizing segmentation of critical security domains.
 
-4. [Re-assess any flows](./microsegmentation#monitor-review-refine) or new applications that may require policy remediation before enforcing a default-deny.
+4. [Re-assess any flows](./microsegmentation#monitor-and-fine-tune-your-policies) or new applications that may require policy remediation before enforcing a default-deny.
    In Calico Open Source, where staged policies are not supported, enforce a default deny in a staging environment to correct any policies prior to enforcing in production.
 
 ### Identify your security domains
