Updates to RN 3.18.3

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -188,20 +188,15 @@ To update an existing installation of {{prodname}} 3.18, see [Install a patch re
 
 ### Calico Enterprise 3.18.3 bug fix update
 
-April DD, 2024
+April 29, 2024
 
 Calico Enterprise 3.18.3 is now available. This release includes bug fixes and improvements.
 
-### Improvements
-
-* one
-* two
-
-
 ### Bug fixes
 
-* one
-* two
+* Fixed an issue where the token login page stopped working when an identity provider was configured.
+* Fixed a bug that caused workload egress traffic to be incorrectly handled as host-sourced traffic if DNS policy and IPVS kube-proxy were used together.
+* Security updates.
 
 #### Updating
 
