Fixes formatting for CE 3.18 RN

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -164,13 +164,13 @@ March 25, 2024
 
 Calico Enterprise 3.18.2 is now available. This release includes bug fixes and improvements.
 
-### Improvements
+#### Improvements
 
 * Reduced the validity of JSON Web Tokens issued by dex to 15 minutes (down from 24 hours).
 * Added a configurable option for `priorityClassName` to the egress gateway CRD.
 * Policy recommendation excludes OpenShift namespaces by default.
 
-### Bug fixes
+#### Bug fixes
 
 * Drastically increased Voltron's Kubernetes client QPS and Burst to prevent it from rate limiting itself in MCM setups.0
 * Fixed a bug that prevented Linseed from creating tokens for Intrusion Detection and DPI components in managed clusters if compliance is not enabled.
@@ -178,7 +178,7 @@ Calico Enterprise 3.18.2 is now available. This release includes bug fixes and i
 * If kube-controllers metric port is set to 0, no ingress rule will be created.
 * Security updates.
 
-### Other
+#### Other
 
 * FIPS mode is no longer supported.
 
@@ -192,7 +192,7 @@ April 29, 2024
 
 Calico Enterprise 3.18.3 is now available. This release includes bug fixes and improvements.
 
-### Bug fixes
+#### Bug fixes
 
 * Fixed an issue where the token login page stopped working when an identity provider was configured.
 * Fixed a bug that caused workload egress traffic to be incorrectly handled as host-sourced traffic if DNS policy and IPVS kube-proxy were used together.
