DOCS-2173: RN for CC 19.2. Variables updates.

--- a/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
@@ -5,6 +5,31 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## April 30, 2024 (version 19.2.0)
+
+### New features and enhancements
+
+#### Automated installation with client credentials
+
+You can now generate and manage client credentials that you can use to automate the Calico Cloud installation process.
+With persistent API keys, you can build repeatable installation commands that connect your clusters as part of an automated workflow.
+
+For more information, see [Install Calico Cloud as part of an automated workflow](../get-started/connect/install-automated.mdx).
+
+#### Feature options for Helm installations
+
+For Helm installations, you can now configure some feature options during installation.
+You can enable or disable Image Assurance, Container Threat Detection, and the Security Posture Dashboard by adding optional parameters to your Helm command.
+
+For more information, see [Connect a cluster to Calico Cloud using Helm](../get-started/connect/install-helm.mdx).
+
+#### Namespace exclusions for image scanning and runtime view
+
+We added the ability to exclude namespaces from image scanning and runtime view.
+By excluding certain namespaces, you can reduce noise in your scan results and focus attention on higher priority workloads.
+
+For more information, see [Configure exclusions for image scanning](../image-assurance/scanners/cluster-scanner.mdx#configure-exclusions-for-image-scanning).
+
 ## April 2, 2024 (version 19.1.0)
 
 ### Bug fixes
