Fixes to automated CC install commands

--- a/calico-cloud/get-started/connect/install-automated.mdx
+++ b/calico-cloud/get-started/connect/install-automated.mdx
@@ -57,14 +57,14 @@ These commands can be added to any automated workflow.
    <TabItem value="kubectl" label="kubectl">
 
    ```bash
-   kubectl apply -f https://installer.dev.calicocloud.io/manifests/cc-operator/latest/deploy.yaml
+   kubectl apply -f https://installer.calicocloud.io/manifests/cc-operator/latest/deploy.yaml
    ```
 
   </TabItem>
   <TabItem value="helm" label="Helm">
 
   ```bash
-  helm repo add calico-cloud https://installer.calicocloud.io/charts --force-update \
+  helm repo add calico-cloud https://installer.calicocloud.io/charts --force-update && \
   helm upgrade --install calico-cloud-crds calico-cloud/calico-cloud-crds \
   --namespace calico-cloud \
   --create-namespace
