Removing bad link to defunct k8s 1.24 documentation

--- a/calico-enterprise_versioned_docs/version-3.16/threat/honeypod/honeypods.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/threat/honeypod/honeypods.mdx
@@ -34,7 +34,7 @@ Honeypods can be configured on a per-cluster basis using "template" honeypod man
 
 ### Configure namespace and RBAC for honeypods
 
-In a v1.24 or earlier cluster, if the [PodSecurityPolicy admission controller](https://v1-24.docs.kubernetes.io/docs/reference/access-authn-authz/admission-controllers/#podsecuritypolicy) is enabled, install the required Honeypod Pod Security Policy:
+In a v1.24 or earlier cluster, if the PodSecurityPolicy admission controller is enabled, install the required Honeypod Pod Security Policy:
 
 ```bash
 kubectl create -f {{filesUrl}}/manifests/threatdef/honeypod/psp-honeypod.yaml
