--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/rancher.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/rancher.mdx
@@ -55,7 +55,7 @@ The geeky details of what you get:
 
 1. [Configure a storage class for {{prodname}}.](../../operations/logstorage/create-storage.mdx).
 
-1. In a v1.24 or earlier cluster, if the [PodSecurityPolicy admission controller](https://v1-24.docs.kubernetes.io/docs/reference/access-authn-authz/admission-controllers/#podsecuritypolicy) is enabled, install the required Tigera operator Pod Security Policy.
+1. In a v1.24 or earlier cluster, if the PodSecurityPolicy admission controller is enabled, install the required Tigera operator Pod Security Policy.
 
    ```bash
    kubectl create -f {{filesUrl}}/manifests/psp-tigera-operator.yaml
