--- a/calico-cloud/reference/component-resources/configure-resources.mdx
+++ b/calico-cloud/reference/component-resources/configure-resources.mdx
@@ -659,13 +659,13 @@ This command will output the configured resource requests and limits for the Gua
 }
 ```
 
-## PacketCapture custom resource
+## PacketCaptureAPI custom resource
 
-The [PacketCapture](../../reference/installation/api.mdx#operator.tigera.io/v1.PacketCapture) CR provides a way to configure resources for PacketCapture. The following sections provide example configurations for this CR.
+The [PacketCaptureAPI](../../reference/installation/api.mdx#operator.tigera.io/v1.PacketCaptureAPI) CR provides a way to configure resources for PacketCapture. The following sections provide example configurations for this CR.
 
-### PacketCaptureDeployment
+### PacketCaptureAPIDeployment
 
-To configure resource specification for the [PacketCapture](../../reference/installation/api.mdx#operator.tigera.io/v1.PacketCapture), patch the PacketCapture CR using the below command:
+To configure resource specification for the [PacketCaptureAPI](../../reference/installation/api.mdx#operator.tigera.io/v1.PacketCaptureAPI), patch the PacketCapture CR using the below command:
 
 ```bash
 kubectl patch packetcaptureapis tigera-secure  --type=merge --patch='{"spec": {"packetCaptureAPIDeployment":{"spec": {"template": {"spec": {"containers":[{"name":"tigera-packetcapture-server","resources":{"limits":{"cpu":"1", "memory":"1000Mi"},"requests":{"cpu":"100m", "memory":"100Mi"}}}]}}}}}}'
