Updates OSS upgrade command for operator installs

--- a/calico/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico/operations/upgrading/kubernetes-upgrade.mdx
@@ -113,7 +113,7 @@ the output and then re-running the command without --dry-run to commit to the ch
 1. Use the following command to initiate an upgrade.
 
    ```bash
-   kubectl replace -f tigera-operator.yaml
+   kubectl apply --server-side --force-conflicts -f tigera-operator.yaml
    ```
 
 ## Upgrading an installation that uses manifests and the Kubernetes API datastore
