updated product names, anchor links and audience address

--- a/use-cases/observability.mdx
+++ b/use-cases/observability.mdx
@@ -5,7 +5,7 @@ title: Observability
 
 # Observability
 
-This guide will walk Kubernetes users through the different observability and monitoring capabilities in Calico to learn how to observe and troubleshoot workload communications, performance, and operations in a Kubernetes cluster.
+This guide will walk you through the different observability and monitoring capabilities in Calico so you can learn how to observe and troubleshoot workload communications, performance, and operations in a Kubernetes cluster.
 
 ## Overview
 
@@ -47,7 +47,7 @@ This flow information is stored in Elasticsearch, and gives you visibility into:
 This information can be used to monitor a cluster to ensure its network traffic is healthy.
 You can also identify issues as they occur, such as workloads communicating with the wrong endpoints or network slowdowns and latency issues.
 
-Calico has a range of different observability tools that suit different purposes.
+Calico Enterprise and Calico Cloud has a range of different observability tools that suit different purposes.
 For example, if you're implementing a security strategy such as microsegmentation, you can see workload interdependencies in order to write network policies (dynamic service and threat graph).
 With the same tool, you can visualize the impact of those policies on traffic flows, or choose other tools that show all network policies (Policies Board), or volumetric cluster traffic (Flow Visualizer).
 If further troubleshooting is required, detailed queries can be made on logs (Kibana).
@@ -63,16 +63,17 @@ Without purpose-built observability, troubleshooting Kubernetes specific issues 
 
 ## Observability tools for different uses
 
-As mentioned, Calico collects a lot of information on network traffic within a cluster. 
-To maximize usability for Calico users, flow metadata is the source of information for many observability tools with Calico Enterprise and Calico Cloud. 
+As mentioned, Calico Enterprise and Calico Cloud collects a lot of information on network traffic within a cluster. 
+To maximize usability, flow metadata powers many observability tools within Calico Enterprise and Calico Cloud. 
 Each of these tools serves a different purpose, depending on the use case for observability and can be distinguished by the level of detail required. 
 For example, a predominantly healthy cluster should not require someone to read through lines and lines of flow logs to determine cluster health regularly.
 However, someone who has identified an issue with a workload may find it useful to do a deep dive into log files, and a tool that makes it easy to find the relevant logs would make the troubleshooting process more efficient.
 As such, in Calico Enterprise and Calico Cloud, there are many features that contribute to observability and provide a different level of detail that are suited to different cluster operations.
 While the observability features discussed in this use case are commercial, Calico Open Source does allow you to create policies with a log action to get insights into traffic flows for defined endpoints.
-These logs can then be passed to other tools, such as Fluent Bit or [Prometheus](https://www.youtube.com/watch?v=FQueSlnGOpk).
-Using [Grafana](/calico/latest/operations/monitor/monitor-component-visual) can be beneficial by providing a means to visualize metrics through graphs that can help you quickly identify unusual activity.
-This may be a sufficient method for some users to [monitor Calico metrics](/calico/latest/operations/monitor/monitor-component-metrics).
+These logs can then be passed to other tools, such as Fluent Bit or Prometheus.
+[This video shows a Calico Open Source and Prometheus integration](https://www.youtube.com/watch?v=FQueSlnGOpk).
+Using [Grafana can be beneficial by providing a means to visualize metrics through graphs](/calico/latest/operations/monitor/monitor-component-visual) that can help you quickly identify unusual activity.
+This may be a sufficient method for you to [monitor Calico Open Source metrics](/calico/latest/operations/monitor/monitor-component-metrics).
 
 ### Cluster monitoring
 
@@ -82,13 +83,14 @@ Particularly for organizations with business-critical applications running in Ku
 Dashboards combine disparate data sources into appropriate visualizations, providing multiple views in one.
 This provides a single place for teams to access real-time data, identify trends, and make informed decisions or take action quickly.
 
-Calico’s built-in dashboards are intended for monitoring and maintaining the state of a healthy cluster, and may be a springboard for taking action or troubleshooting.
+Calico Enterprise and Calico Cloud's built-in dashboards are intended for monitoring and maintaining the state of a healthy cluster, and may be a springboard for taking action or troubleshooting.
 
-Calico provides two built-in dashboards: Cluster Health and Security Posture.
+Calico Cloud provides two built-in dashboards: Cluster Health and Security Posture.
 
-For users looking to monitor the overall health of their cluster:
+If you are looking to monitor the overall health of you cluster:
 
 *Cluster Health:* This is a customizable view for either a cluster or namespace that shows policies, endpoints, services, and more.
+This is available in Calico Enterprise and Calico Cloud.
 It provides an overview of network and security-related activities and behavior within a defined timeframe, such as: 
 
 * Number of policies, including unused or policies denying traffic
@@ -100,12 +102,12 @@ It provides an overview of network and security-related activities and behavior 
 
 This dashboard provides a holistic view of namespace or cluster activity, making it easy to identify anomalous behavior.
 
-For users looking to quickly assess how secure their cluster is, with actionable insights:
+If you are looking to quickly assess how secure your cluster is, with actionable insights:
 
-*Security Posture:* Calico generates a security score based on image risk, egress access security, and namespace isolation.
+*Security Posture:* Calico Cloud generates a security score based on image risk, egress access security, and namespace isolation.
 Your security score can be viewed over time, with recommended actions and riskiest namespaces in one view to get a holistic view of cluster security.
 This dashboard makes it easy for someone to monitor cluster security over time with recommended actions to improve the security posture of a cluster.
-Providing security posture in a dashboard with a low level of detail makes it easy for a Calico user to identify potential weaknesses in security posture without the need to manually check all image scan results, review network policies for every namespace, and flow logs for unsecured egress access.
+Providing security posture in a dashboard with a low level of detail makes it easy for you to identify potential weaknesses in security posture without the need to manually check all image scan results, review network policies for every namespace, and flow logs for unsecured egress access.
 
 ![Security posture](/img/calico-cloud/security-posture-overview.png)
 
@@ -115,17 +117,17 @@ Calico Enterprise and Calico Cloud also provide dashboards through Kibana that a
 
 The next category of observability tools provide more detailed insights and information about cluster resources than a dashboard, but not at the level of detail logs would provide.
 
-The observability tools that Calico provides in this category are well suited to users who need to get an understanding of how different resources in their cluster interact, what the dependencies are, and more details on communication patterns.
+The observability tools that Calico Enterprise and Calico Cloud provides in this category are well suited to anyone who needs to get an understanding of how different resources in their cluster interact, what the dependencies are, and more details on communication patterns.
 This is crucial before implementing any security measures, allowing you to correctly design, validate and monitor.
 
 In Calico Enterprise and Calico Cloud you can visualize cluster traffic topographically, making it easy to identify any namespaces or pods that might be experiencing issues, from denied network flows to security alerts.
-Calico’s two visualization capabilities are Dynamic Service and Threat Graph and Flow Visualizer.
+The two visualization capabilities are Dynamic Service and Threat Graph and Flow Visualizer.
 Both tools show traffic flows, color-coded traffic actions (denied or allowed), and allow you to filter views to focus on a cluster view, namespace, or service.
 These tools are valuable when defining, applying, and reviewing network policy within a cluster because it is very easy to visualize dependencies and interactions between namespaces, pods, and microservices, and assess the impact of any network policy changes.
 
 #### Network policy management and visualization
 
-Calico has an additional tool for network policy visibility and management.
+Calico Enterprise and Calico Cloud have an additional tool for network policy visibility and management.
 Creating network policy can be complex.
 Being able to observe all policies applied to a cluster in the correct order with the impacts of those policies visible can save you a lot of time when you're implementing and managing network policies.
 
@@ -145,7 +147,7 @@ In the default view, double-click any icon to navigate to that resource (a names
 Other troubleshooting or monitoring behaviors can be initiated or viewed from the Dynamic Service and Threat Graph, such as security events or packet captures.
 Security alerts will also be displayed visually, so that anyone viewing the cluster can quickly see any cause for concern and act.
 
-For a video walkthrough of Dynamic Service and Threat Graph, click [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=46g9yglrpt).
+[A video walkthrough of Dynamic Service and Threat Graph](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=46g9yglrpt).
 
 *Flow Visualizer* gives a 360-degree view of a cluster, where network traffic is represented volumetrically.
 The views, and color-coding of Flow Visualizer can be filtered on the right-hand side by namespace, service, or flow.
@@ -162,7 +164,7 @@ Using other tools before you analyze log files helps you narrow down the scope o
 When you're ready to dive in to log files, you should already have a good idea of metadata to filter on or target, providing a more efficient approach to their investigation.
 
 In Calico Enterprise and Calico Cloud, logs are stored in Elasticsearch.
-There are several different log types that Calico supports and collects:
+There are several different log types that are collected:
 
 * *Flow logs:* Network flows for workloads, source and destination namespaces, pods, labels, and policies.
 * *Audit logs:* Audit logs for Calico and Kubernetes resources.
@@ -192,7 +194,7 @@ Specific examples of how to use these observability features for these issues ca
 ### Most-detailed observability
 
 Because Calico Enterprise and Calico Cloud store logs in Elasticsearch, these applications also provide Kibana as an interface to explore Elasticsearch logs and gain insights into workload communication, traffic volume, performance, and other key aspects of cluster operations.
-The dashboards in the Manager UI are suited to most users who need to observe cluster health more generally.
+The dashboards in the Manager UI are suited to anyone who needs to observe cluster health more generally.
 Kibana dashboards suit more advanced users who have a deeper understanding of the cluster and applications running within it, who are comfortable building queries and filters for more comprehensive insights or troubleshooting efforts.
 
 Similarly, the flow logs paired with the dynamic service and threat graph are well suited to less complex troubleshooting, and useful when compared with cluster visualizations.
@@ -210,7 +212,7 @@ There are a number of prebuilt dashboards in Kibana, such as:
 
 Each dashboard has advanced filtering options if the prebuilt dashboards are insufficient. 
 
-As an example, the prebuilt DNS dashboard is shown below, which allows users to quickly identify DNS health and performance.
+As an example, the prebuilt DNS dashboard is shown below, which allows you to quickly identify DNS health and performance.
 
 ![Kibana DNS dashboard](/img/use-cases/kibana-dns-dashboard.png)
 
@@ -223,10 +225,10 @@ A targeted DNS dashboard provides one view for all DNS-related metrics, includin
 * Measuring DNS response latency to pinpoint application performance issues.
 
 Filters and queries can be added to dashboards to increase the level of detail, such as filtering for specific namespaces.
-It is possible to create new dashboards based on user-defined queries and filters.
+It is possible to create new dashboards based on custom queries and filters.
 
 This example dashboard only includes egress traffic from a cluster.
-A user viewing this dashboard can create and validate egress access controls, or DNS policies, based on insights from dashboard.
+Anyone viewing this dashboard can create and validate egress access controls, or DNS policies, based on insights from dashboard.
 
 ![Kibana egress access](/img/use-cases/kibana-egress-dashboard.png)
 
@@ -237,7 +239,7 @@ Using Kibana to troubleshoot issues is discussed below.
 Different types of logs are categorized into indexes.
 All logs are enabled by default except L7 logs, which must be explicitly enabled.
 
-Using logs in Kibana gives users more control over the queries and filters used to get information about traffic.
+Using logs in Kibana gives you more control over the queries and filters used to get information about traffic.
 For example, the built-in flow logs are restricted to show specific columns.
 In Kibana, logs can be filtered and columns chosen based on all of the metadata available.
 
@@ -249,9 +251,7 @@ This suits users who are using logs to narrow focus for a specific use or comple
 
 ### Specific Use Cases
 
-Calico’s observability features go beyond visualizing the internals of a cluster, and provide a place to highlight potential issues or security concerns, troubleshoot communication issues, and even identify flows that need to be secured.
-
-Observability in Calico is often used to view, monitor and troubleshoot:
+Calico Enterprise and Calico Cloud's observability features go beyond visualizing the internals of a cluster, and provide a place to highlight potential issues or security concerns, troubleshoot communication issues, and even identify flows that need to be secured, such as:
 
 * Network policies and flows
 * Cluster traffic
@@ -259,7 +259,7 @@ Observability in Calico is often used to view, monitor and troubleshoot:
 * DNS issues
 * TCP performance
 
-Each section has been grouped into a few different scenarios that outline how Calico features can help solve these use cases.
+Each section has been grouped into a few different scenarios that outline how Calico Enterprise and Calico Cloud can help solve these use cases.
 
 #### Network policies and flows
 
@@ -268,7 +268,7 @@ Each section has been grouped into a few different scenarios that outline how Ca
 Flow logs can be used to identify flows that are either allowed or denied by policies.
 Each flow is reported twice, once by the source and once by the destination, so there are two different perspectives for each flow.
 
-Denied flows can easily be identified in many places within Calico:
+Denied flows can easily be identified in many places within Calico Enterprise or Calico Cloud:
 
 * *Dashboards* - Unless the view has been customized, there is a policies widget on the built-in dashboard showing policies, which will show a count of policies that are denying traffic.
 * *Dynamic Service and Threat Graph* - Dynamic Service and Threat Graph flow lines will change to red or orange if flows are being denied.
@@ -276,7 +276,7 @@ Denied flows can easily be identified in many places within Calico:
 * *Logs* - Flow logs viewed through Dynamic Service and Threat Graph and will automatically filter based on the current view, or create custom filters for denied traffic.
 * *Kibana* - Dashboards or logs accessed through Kibana can be filtered with queries specifically targeting flows with action : deny
 
-You can see Kibana in action [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=3ezb78hxy2).
+[See Kibana in action](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=3ezb78hxy2).
 
 ##### Identify flows denied by a policy
 
@@ -287,7 +287,7 @@ You may need to see all flows being impacted by a policy for analysis or to conf
 * *Logs* - Flow logs viewed through Dynamic Service and Threat Graph and will automatically filter based on the current view, or create custom filters for denied traffic.
 * *Kibana* - Dashboards or logs accessed through Kibana can be filtered with queries specifically targeting policies with queries like: `policies:{all_policies: deny and all_policies: tenant-01-restrict}`. This query would show all flows being denied by the `tenant-01-restrict` policy.
 
-You can see Kibana in action [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=hfe7untjrb)
+[See Kibana in action](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=hfe7untjrb)
 
 #### Cluster traffic
 
@@ -301,25 +301,25 @@ Visualizing inbound and outbound bytes may help identify whether your applicatio
 * *Kibana* - Dashboards in Kibana have pie charts that show volumetric traffic by bytes in and out for source and destination namespaces.
   Dashboards can be filtered to provide more detailed information.
 
-To see how filtering can be set up in dashboards to view bytes in/out for specific namespaces and find flows of interest, watch [this video](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=6qmpv3il71).
+[See how filtering can be set up in dashboards to view bytes in/out for specific namespaces and find flows of interest](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=6qmpv3il71).
 
 ##### Identify flows with “bytes_in : 0”
 
 Flows with “bytes_in : 0” and “action : allow” indicate that an upstream firewall denied a flow, or the server is not responding to the connection.
 This can be used to troubleshoot issues related to firewall policies outside of Kubernetes.
-Typically, Calico will show that the flow was allowed but the user will complain that the connection was not established.
+Typically, Calico Enterprise or Calico Cloud will show that the flow was allowed but the client or user will complain that the connection was not established.
 
 This could be due to:
 
 * There is a firewall in front of the external service
 * The service is no longer live or active
 
-When this happens, Calico will show X number of bytes going out, but no bytes coming in.
+When this happens, Calico Enterprise or Calico Cloud will show X number of bytes going out, but no bytes coming in.
 
 * *Logs* - Flow logs record the number of bytes in and bytes out for each flow, so you can identify flows with 0 bytes in.
 * *Kibana* - Dashboards and logs in Kibana show bytes in/out for flows, making it easy to find flows that are not being denied by network policies (ruling out issues with Calico) and have 0 bytes in.
 
-To see this shown in a Flow Log Dashboard you can watch [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=of8f6qwxul).
+[See this shown in a Flow Log Dashboard](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=of8f6qwxul).
 
 #### Flow properties and metadata
 
@@ -327,7 +327,7 @@ To see this shown in a Flow Log Dashboard you can watch [here](https://fast.wist
 
 Within a pod there could be more than one container, and each container could have different processes initiating or receiving flows.
 Typically, identifying the port or container level might be easier, but identifying the specific process is harder.
-Calico uses eBPF probes to record this data and enrich flow logs with a process ID.
+Calico uses eBPF probes to record this data and enrich flow logs with a process ID. All Calico products (Open Source, Enterprise or Cloud) support eBPF as a dataplane.
 
 This is useful for identifying a workload initiating communication with decommissioned services or services it shouldn’t be communicating with.
 It can also be used to identify any communication related to a vulnerability, such as log4j. 
@@ -350,11 +350,11 @@ This makes it easy to identify which ports are being communicated to from within
 You could, for example, identify all traffic communicating with a database, or identify SSH traffic.
 This helps you identify workloads communicating over particular service ports.
 
-To see how to do this in Kibana watch [this video](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=0n4rioj2jk)
+[See how to identify traffic to specific ports in Kibana](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=0n4rioj2jk)
 
 ##### Identify traffic to specific FQDNs
 
-If workloads are communicating with external services where the IP address correlates with a DNS entry, Calico can record the fully qualified domain name (FQDN) of that service.
+If workloads are communicating with external services where the IP address correlates with a DNS entry, Calico Enterprise and Calico Cloud can record the fully qualified domain name (FQDN) of that service.
 This helps you identify workloads that are communicating with public external services.
 
 * *Logs* - Flow logs contain the FQDN.
@@ -372,7 +372,7 @@ This could be a service within your organization or environment, public IP addre
 * *Logs* - Flow logs contain the destination IP address. 
 * *Kibana* - The Kibana dashboards have a ‘unique destination IP’ widget which lists the top values of dest_ip from flow logs, with a record count. Clicking on an IP address creates a filter, and you can use that to filter flows that have been communicating with that IP address.
 
-To watch an example in Kibana watch [this video](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=lsb7b97015).
+[Watch an example of identifying traffic to specific destination IPs in Kibana](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=lsb7b97015).
 
 ##### Identify all egress connections from a workload
 
@@ -385,7 +385,7 @@ Knowing what external services your workload(s) are communicating with may be us
 
 This approach is similar to the *Identify FQDN* section, and can combined with other filters or widgets to identify service ports, and potentially highlight connections to insecure services (using 80 instead of 443, for example).
 
-A video showing this approach in Calico and Kibana can be seen [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=d9zrz6qjmg).
+[See how to identify all egress connections from a workload in Kibana](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=d9zrz6qjmg).
 
 #### DNS
 
@@ -398,7 +398,7 @@ Some organizations may have complex DNS queries, matrix, multiple DNS servers, a
 This gets more complicated if there are multiple DNS zones or global load balancing between geolocated services that have their own servers.
 If any of those other servers are experiencing issues they could manifest as DNS issues impacting your workloads.
 
-Calico provides the following features to troubleshoot DNS issues:
+Calico Enterprise and Calico Cloud provides the following features to troubleshoot DNS issues:
 
 * *Dynamic Service and Threat Graph* - Dynamic Service and Threat Graph provides a graphical view of connectivity to kube-dns from different namespaces and workloads, and the interactive interface aids with troubleshooting, for example automatically filtering logs. 
 * *DNS Logs* - DNS logs are standard and include DNS queries within the cluster from pods to kube-dns to external DNS servers.
@@ -412,11 +412,11 @@ Using these observability features can help troubleshoot:
 * SERVFAIL errors, where DNS servers fail to respond to queries, which might be due to DNS server outages or misconfigurations
 * NXDOMAIN issues, where an resource record is missing for a domain, which could be due to a misconfigured application, incorrect or decommissioned domain
 
-To see exactly how to troubleshoot DNS issues in Calico, explore the [Introduction to DNS Observability Challenges](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=kxwsd05vqg) video series.
+To see exactly how to troubleshoot DNS issues in Calico Enterprise or Calico Cloud, watch the [Introduction to DNS Observability Challenges](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=kxwsd05vqg) video series.
 
 #### TCP
 
-Calico provides the following features to troubleshoot TCP issues:
+Calico Enterprise and Calico Cloud provides the following features to troubleshoot TCP issues:
 
 * *TCP Dashboard* - Kibana has a DNS dashboard that shows minimum round trip time, maximum round trip time, TCP retransmissions and TCP packet drops, throughput (bytes and packets in/out), for each node, as well as detailed logs.
 
@@ -427,4 +427,4 @@ Using filters can help narrow down the scope of performance issues and see what 
 The TCP performance dashboard is a starting point for identifying anomalies and getting an overview of TCP performance.
 Use filters to see statistics for nodes, applications, ports, destinations and so on.
 
-You can watch how to do this in more detail [here](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=sk1g5jn0cv).
+Watch how Calico Enterprise or Calico Cloud can enable you to troubleshoot TCP videos in this [TCP video series](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=sk1g5jn0cv).
